fix: text spacing negative top margin

--- a/assets/scss/layouts/body.scss
+++ b/assets/scss/layouts/body.scss
@@ -90,11 +90,11 @@
       margin-bottom: 0.5em;
     }
     h2 {
-      margin-top: 2em;
+      margin-top: 1em;
       margin-bottom: 0.5em;
     }
     h3 {
-      margin-top: 1em;
+      margin-top: .75em;
       margin-bottom: 0.5em;
     }
   }
